--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
 Flask==2.3.3
 Flask-CORS==4.0.0
 flask-restx==1.3.2
+Flask-JWT-Extended==4.6.0
+bcrypt==4.1.2
 pytest==7.4.3
 pytest-flask==1.3.0
 requests==2.32.5
